Revert "Revert "sonar (#5617)""
This reverts commit 64e925607af88b28d4ab4d4baf90abaf5cefe62a.